--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "videojs-vast-plugin",
   "version": "0.2.1",
-  "homepage": "https://github.com/theonion/videojs-vast-plugin",
+  "homepage": "https://github.com/ngerasimov/videojs-vast-plugin",
   "authors": [
     "Shaker Islam <sislam@theonion.com>",
     "Chris Sinchok <csinchok@theonion.com>",
@@ -28,7 +28,7 @@
     "lib"
   ],
   "dependencies": {
-    "videojs": "4.4.3",
+    "video.js": ">=4.12",
     "vast-client-js": "1.1.2",
     "videojs-contrib-ads": "0.5.0"
   }
